--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 src/main/java/com/sofkau/crudpersona/config
-src/main/java/com/sofkau/crudpersona/controller
 src/main/java/com/sofkau/crudpersona/utils
+
+README.md
 ### STS ###
 .apt_generated
 .classpath
